# redash-stmo

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.circleci/: config.yml  docker-compose.circle.yml
redash_stmo/: __init__.py  resources.py  settings.py
redash_stmo/data_sources/: health.py
redash_stmo/data_sources/link/: __init__.py
redash_stmo/data_sources/query_status/: __init__.py
redash_stmo/data_sources/query_status/bundle/: query_status.js
redash_stmo/data_sources/validator/bundle/: datasource_validator.js
redash_stmo/data_sources/version/: extension.py
redash_stmo/data_sources/version/bundle/: datasource_version.js
redash_stmo/handlers/authentication/: remote_user_auth.py
redash_stmo/handlers/query_results/: extension.py
redash_stmo/query_runner/: big_query.py
src/redash_stmo/: __init__.py  api_endpoint.py  datasource_link.py  datasource_version.py  dockerflow.py  health.py  resources.py  settings.py
src/redash_stmo/data_sources/: health.py
src/redash_stmo/data_sources/details/: extension.py
src/redash_stmo/data_sources/details/bundle/: DataSourceDetails.jsx
src/redash_stmo/data_sources/link/: __init__.py  extension.py
src/redash_stmo/data_sources/link/bundle/: DataSourceLink.jsx  datasource_link.js
src/redash_stmo/data_sources/query_status/: __init__.py
src/redash_stmo/data_sources/query_status/bundle/: query_status.js
src/redash_stmo/data_sources/validator/: extension.py
src/redash_stmo/data_sources/version/: __init__.py  extension.py
src/redash_stmo/data_sources/version/bundle/: DataSourceVersion.jsx  datasource_version.js
src/redash_stmo/datasource_health/: health.py
src/redash_stmo/datasource_health/settings/: __init__.py
src/redash_stmo/datasource_link/bundle/: datasource_link.js
src/redash_stmo/handlers/: extract_table_names.py  query_results.py
src/redash_stmo/handlers/authentication/: remote_user_auth.py
src/redash_stmo/handlers/query_results/: extension.py  parser.py
src/redash_stmo/integrations/iodide/: extension.py  iodide-notebook.iomd.j2  iodide-template.iomd
src/redash_stmo/integrations/iodide/bundle/: IodideButton.jsx  integrations_iodide.js
src/redash_stmo/query_runner/: activedata.py  big_query.py  presto.py
tests/: test_datasource_link.py  test_datasource_version.py  test_health.py  test_query_result_permissions.py
tests/data_sources/: test_details.py  test_link.py  test_version.py
tests/handlers/: test_query_result_permissions.py  test_remote_user_auth.py
tests/integrations/: test_iodide.py
tests/query_runner/: test_big_query.py  test_presto.py
