[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "redash-stmo"
version = "2019.6.1"
description = "Extensions to Redash by Mozilla"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment :: Mozilla",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Internet :: WWW/HTTP",
]
license = "MPL-2.0"
homepage = "https://github.com/mozilla/redash-stmo"
authors = ["Mozilla Foundation <dev-webdev@lists.mozilla.org>"]
readme = "README.rst"
include = ["AUTHORS.rst", "CHANGELOG.rst", "CODE_OF_CONDUCT.md", "*.js", "*.jsx", "*.css"]

[tool.poetry.plugins]
[tool.poetry.plugins."redash.extensions"]
dockerflow = "redash_stmo.dockerflow:extension"
datasource_health = "redash_stmo.data_sources.health:extension"
datasource_link = "redash_stmo.data_sources.link.extension:extension"
datasource_validator = "redash_stmo.data_sources.validator.extension:extension"
datasource_version = "redash_stmo.data_sources.version.extension:extension"
handler_queryresults = "redash_stmo.handlers.query_results.extension:extension"
handler_remote_user_auth = "redash_stmo.handlers.authentication.remote_user_auth:extension"
queryrunner_presto = "redash_stmo.query_runner.presto:extension"

[tool.poetry.plugins."redash.bundles"]
datasource_link = "redash_stmo.data_sources.link"
datasource_version = "redash_stmo.data_sources.version"

[tool.poetry.plugins."redash.periodic_tasks"]
update_health_status = "redash_stmo.data_sources.health:periodic_task"

[tool.poetry.dependencies]
python = "^2.7"
dockerflow = ">=2018.4.0"
# As long as the upstream Redash repo installs pytest<3.5:
flake8 = {version = "==3.5.0",optional = true}
mock = {optional = true,version = "*"}
pgsanity = "*"
pyhive = "*"
pytest = {optional = true,version = "*"}
pytest-cov = {optional = true,version = "*"}
pytest-flake8 = {version = "<1.0.1",optional = true}
requests = "*"
six = "*"
sqlparse = "*"

[tool.poetry.dev-dependencies]
watchdog = "*"

[tool.poetry.extras]
test = ["flake8", "mock", "pytest", "pytest-cov", "pytest-flake8"]
dev = ["watchdog"]
main = ["watchdog"]
